--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landing {
+  background: #fff url('header-bg.jpg') no-repeat scroll center;
+  height: 90vh;
+  margin-top: -10px;
+  max-width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.landing header {
+  color: yellow;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  padding: 15px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: baseline;
+  align-content: center;
+  justify-content: space-around;
+  box-sizing: border-box;
+  position: fixed;
+  width:100%;
+}
+
+h4 {
+  margin: 0;
+  font-size: 1.3rem;
+}
+
+.landing nav {
   color: white;
+  text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
+nav span{
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.dropdown {
+  display: none;
+}
+
+.dropdown-menu {
+  display: none;
+}
+
+.landing-middle {
+  margin: 0 auto;
+  position: relative;
+  top: 200px;
+}
+
+.landing-middle h3, 
+.landing-middle h1 {
+  color: white;
+  margin: 10px 0;
+}
+
+.landing-middle h1 {
+  text-transform: uppercase;
+  font-size: 5rem;
+}
+
+.landing-middle h3 {
+  font-size: 2.8rem;
+}
+
+button {
+  background-color: rgb(245, 220, 77);
+  color: white;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 20px 35px;
+  font-size: 1.3rem;
+  border: none;
+  margin-top: 50px;
+}
+
+/*MEDIA QUERIES*/
+@media(max-width: 740px){
+  .navbar{
+    background-color: rgb(43, 42, 42);
   }
-  to {
-    transform: rotate(360deg);
+
+  .nav-list {
+    display: none;
+  }
+  
+  .dropdown {
+    display: initial;
+    cursor: pointer;
+    color:white;
+    background:rgb(245, 220, 77);
+    padding: 8px 10px;
+    font-weight: bold;
+    border-radius: 5px;
+  }
+
+  .dropdown-menu {
+    display: flex;
+    height: 230px;
+    width: 200px;
+    background: rgb(43, 42, 42);
+    color: white;
+    position: fixed;
+    right: 0;
+    top: 54px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border-radius: 5px;
+  }
+}
+
+@media(max-width: 880px){
+  .landing-middle h1 {
+    font-size:3.5rem;
+  }
+
+  .landing-middle h3 {
+    font-size: 2rem;
   }
 }
